<resources>
    <string name="app_name">Hangboard Interval Timer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv0">00</string>
    <string name="tv1">01</string>
    <string name="tv2">02</string>
    <string name="tv3">03</string>
    <string name="tv4">04</string>
    <string name="tv5">05</string>
    <string name="tv6">06</string>
    <string name="tv7">07</string>
    <string name="tv8">08</string>
    <string name="tv9">09</string>
    <string name="colon"> : </string>
</resources>
