<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollY="26sp"
    android:scrollbars="none"
    android:layout_gravity="center"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:includeFontPadding="false"
            android:text="@string/tv0"/>
        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:includeFontPadding="false"
            android:text="@string/tv1"/>
        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:includeFontPadding="false"
            android:text="@string/tv2"/>
        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:includeFontPadding="false"
            android:text="@string/tv3"/>
        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:includeFontPadding="false"
            android:text="@string/tv4"/>
        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:includeFontPadding="false"
            android:text="@string/tv5"/>
        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:includeFontPadding="false"
            android:text="@string/tv6"/>
        <TextView
            android:id="@+id/tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:includeFontPadding="false"
            android:text="@string/tv7"/>
        <TextView
            android:id="@+id/tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:includeFontPadding="false"
            android:text="@string/tv8"/>
        <TextView
            android:id="@+id/tv9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:includeFontPadding="false"
            android:text="@string/tv9"/>
    </LinearLayout>
</ScrollView>